// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With theme changes  Should have intermediate border radius 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`With theme changes  Should have square border radius 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 1px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 1px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`With theme changes  Should not have box shadows applied 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`With theme changes  should have 2px border 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 2px solid;
  border-radius: 8px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 2px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should default to standard variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render Spinner when loading is true 1`] = `
<DocumentFragment>
  .c2 {
  font-size: 16px;
  vertical-align: middle;
}

.c3 {
  -webkit-animation: bKPVWD 0.75s linear infinite;
  animation: bKPVWD 0.75s linear infinite;
}

.c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  background-color: hsl(0,0%,90%);
  color: hsl(0,0%,70%);
  border-color: hsl(0,0%,90%);
  cursor: not-allowed;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      style="visibility: hidden;"
    >
      Submit
    </span>
    <svg
      aria-label="loading"
      class="c1 c2 c3"
      fill="currentcolor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12,0 C5.372583,0 0,5.372583 0,12 C0,18.627417 5.372583,24 12,24 C18.627417,24 24,18.627417 24,12 C24,11.4477153 23.5522847,11 23,11 C22.4477153,11 22,11.4477153 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 C12.5522847,2 13,1.55228475 13,1 C13,0.44771525 12.5522847,0 12,0 Z"
        transform="rotate(-177 12 12)"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render call to action variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,35%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render danger variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  background-color: hsl(353,84%,44%);
  color: hsl(0,0%,100%);
  border-color: hsl(353,84%,44%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  background-color: hsl(353,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(353,96%,11%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      I am dangerous
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render disabled variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  background-color: hsl(0,0%,90%);
  color: hsl(0,0%,70%);
  border-color: hsl(0,0%,90%);
  cursor: not-allowed;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    disabled=""
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render inverse call to action variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,35%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  color: hsl(200,96%,35%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,100%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render inverse danger variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  color: hsl(353,84%,44%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(353,84%,44%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  background-color: hsl(353,84%,44%);
  color: hsl(0,0%,100%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      I am also dangerous
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render inverse disabled variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  background-color: hsl(0,0%,90%);
  color: hsl(0,0%,70%);
  border-color: hsl(0,0%,90%);
  cursor: not-allowed;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    disabled=""
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render inverse standard variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(0,0%,100%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,100%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render standard variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should support margin space props 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  margin-top: 24px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .sc-hkePoP {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c0:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      I have margins!
    </span>
  </button>
</DocumentFragment>
`;
